bitcoin.conf reset to default

--- a/bitcoin-core/docker-image/btc/bitcoin.conf
+++ b/bitcoin-core/docker-image/btc/bitcoin.conf
@@ -9,7 +9,7 @@
 # want to read "[Sections]" further down.
 
 # Run on the test network instead of the real bitcoin network.
-testnet=0
+#testnet=0
 
 # Run a regression test network
 #regtest=0
