MV init.sh -> init-btc.sh

--- a/bitcoin-core/docker-image/Dockerfile
+++ b/bitcoin-core/docker-image/Dockerfile
@@ -18,5 +18,5 @@ RUN chmod a+x ./*.sh
 EXPOSE 8333 8332 18333 18332 18443 18444
 
 # Run 'init' script
-ENTRYPOINT ["./init.sh"]
+ENTRYPOINT ["./btc-init.sh"]
 CMD [""]
